updated index page

--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
       Analyze your own Facebook Messenger data. ✌️<br><br>
 
       <strong>STEP 1:</strong><br>
-      Go <a href="http://facebook.com/dyi">download your Facebook messaging data</a>. Select the relevant date range and select the JSON data format. Under "Your Information", select only "Messages". Download & unzip.<br><br>
+      Go <a href="http://facebook.com/dyi">download your Facebook messaging data</a>. Select the relevant date range and select the JSON data format. Under "Your Information," select only "Messages." Download & unzip.<br><br>
 
       <strong>STEP 2:</strong><br>
       <a href="Messenger%20Analytics.zip" download>
         Download the app
-      </a> and run it. You just might be surprised at the results... (I know I was!)
+      </a> and run it.<br>
+      (Yes, I know, the app isn't very pretty. 🙈)<br><br>
     </div>
   </body>
 </html>
