update index page and README

--- a/index.html
+++ b/index.html
@@ -11,14 +11,25 @@
       <h1>Facebook Messenger Analytics</h1>
       Analyze your own Facebook Messenger data. ✌️<br><br>
 
-      <strong>STEP 1:</strong><br>
-      Go <a href="http://facebook.com/dyi">download your Facebook messaging data</a>. Select the relevant date range and select the JSON data format. Under "Your Information," select only "Messages." Download & unzip.<br><br>
+      <strong>STEP ONE:</strong><br>
+      Go <a href="http://facebook.com/dyi">download your Facebook messaging data</a>. Select the relevant date range and select the JSON data format. Under "Your Information," select only "Messages." Download & unzip.
+      <div class="note"><em>Note:</em> Downloading your data might take a while, depending on how much data there is. For reference, it took me around 30 minutes to download 4.5 years of data.</div>
+      <br>
 
-      <strong>STEP 2:</strong><br>
+      <strong>STEP TWO:</strong><br>
       <a href="Messenger%20Analytics.zip" download>
-        Download the app
-      </a> and run it.<br>
-      (Yes, I know, the app isn't very pretty. 🙈)<br><br>
+        Download the app (macOS)
+      </a> or 
+      <a href="https://github.com/w-sheng/fb-messages">
+        find the Github repository here
+      </a> (instructions in the README).
+      <div class="note">
+        <em>Notes:</em><br>
+        <ul>
+          <li>As a PSA, the app is quite ugly. 🙈
+          <li>This was a mini project so I didn't thoroughly test any of the code. Feel free to let me know if you find some egregious bug though!
+        </ul>
+      </div>
     </div>
   </body>
 </html>
