update mobile index page to be less ugly

--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
   <body>
     <div class="content">
       <h1>Facebook Messenger Analytics</h1>
-      Analyze your own Facebook Messenger data. ✌️<br><br>
+      <h2>Analyze your own Facebook Messenger data. ✌️</h2><br>
 
       <strong>STEP ONE:</strong><br>
       Go <a href="http://facebook.com/dyi">download your Facebook messaging data</a>. Select the relevant date range and select the JSON data format. Under "Your Information," select only "Messages." Download & unzip.
       <div class="note"><em>Note:</em> Downloading your data might take a while, depending on how much data there is. For reference, it took me around 30 minutes to download 4.5 years of data.</div>
-      <br>
+      <br><br>
 
       <strong>STEP TWO:</strong><br>
       <a href="Messenger%20Analytics.zip" download>
